# CanvasExperiment

./: CMakeLists.txt  README.md  resources.qrc
qml/: main.qml
qml/components/: ControlButton.qml  CustomizationMenu.qml  ErrorOverlay.qml  LoadingOverlay.qml
src/: backgroundmanager.cpp  backgroundmanager.h  main.cpp  videoplayer.cpp  videoplayer.h
